footer, sidebar updated + video room fixes

--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-list/landing-hackathon-list.component.html
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-list/landing-hackathon-list.component.html
@@ -24,21 +24,13 @@
               </a>
           </li>
 
-          <li>
-              <a (click)="router.navigate(['/prize-form'], {fragment: 'highlights'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
-                  <span>Add a prize</span>
-              </a>
-          </li>
+         
           <li>
               <a (click)="router.navigate(['/sponsor-prizes'], {fragment: 'highlights'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                   <span>My prizes</span>
               </a>
           </li>
-          <li>
-              <a (click)="router.navigate(['/sponsor-application-form'], {fragment: 'pricing'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
-                  <span>Apply as a sponsor</span>
-              </a>
-          </li>
+          
           <li>
               <a (click)="router.navigate(['/sponsors-leaderboard'], {fragment: 'pricing'})" pRipple class="flex m-0 md:ml-5 px-0 py-3 text-900 font-medium line-height-3">
                   <span>Sponsor Leaderboard</span>
@@ -154,4 +146,53 @@
   </div>
   </div>
   
-  
+  <div class="footer">
+    <div class="footer-content">
+      <div class="footer-logo">
+        <img src="assets/layout/images/hackathonnetlogo-nobg.png" alt="HackathonNet Logo" class="footer-logo-img">
+        <p>© 2025 HackathonNet. All rights reserved.</p>
+      </div>
+      
+      <div class="footer-links">
+        <div class="footer-section">
+          <h4>Platform</h4>
+          <ul>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Browse Events</a></li>
+            <li><a href="#">For Organizers</a></li>
+            <li><a href="#">For Sponsors</a></li>
+          </ul>
+        </div>
+        
+        <div class="footer-section">
+          <h4>Resources</h4>
+          <ul>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Documentation</a></li>
+            <li><a href="#">Community</a></li>
+            <li><a href="#">Support</a></li>
+          </ul>
+        </div>
+        
+        <div class="footer-section">
+          <h4>Company</h4>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Press Kit</a></li>
+          </ul>
+        </div>
+        
+        <div class="footer-section">
+          <h4>Connect</h4>
+          <div class="social-icons">
+            <a href="#" class="social-icon"><i class="pi pi-twitter"></i></a>
+            <a href="#" class="social-icon"><i class="pi pi-facebook"></i></a>
+            <a href="#" class="social-icon"><i class="pi pi-linkedin"></i></a>
+            <a href="#" class="social-icon"><i class="pi pi-github"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
