--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.html
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.html
@@ -195,7 +195,7 @@
             </div>
             <div class="team-info">
               <h3>{{ team.teamName }}</h3>
-              <p>{{ team.teamMembers.length }} members</p>
+              <p>{{ team?.teamMembers?.length }} members</p>
             </div>
           </div>
         </div>
