--- a/src/app/demo/components/hackathons/hackathon-details/hackathon-details.component.html
+++ b/src/app/demo/components/hackathons/hackathon-details/hackathon-details.component.html
@@ -84,7 +84,7 @@
           </div>
           <div class="team-info">
             <h3>{{ team.teamName }}</h3>
-            <p>{{ team.teamMembers.length }} members</p>
+            <p>{{ team?.teamMembers?.length }} members</p>
           </div>
         </div>
       </div>
