front + back + design enhancement

--- a/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.html
+++ b/src/app/demo/components/landing/Hackathon/landing-hackathon-details/landing-hackathon-details.component.html
@@ -121,6 +121,17 @@
     (click)="applyAsMentor()" 
     *ngIf="hackathon && user"
   ></button>
+  <button pButton
+  type="button"
+  [label]="getParticipateButtonLabel()"
+  [icon]="getParticipateButtonIcon()"
+  class="p-button-lg participate-button"
+  [class.participate-join]="!userTeam"
+  [class.participate-chat]="userTeam"
+  [disabled]="loading || loadingDialog"
+  (click)="participate()">
+    <span class="button-hover-effect"></span>
+  </button>
   </div>
 </div>
 <p-toast></p-toast>
