--- a/src/app/demo/components/quizf/quizf-list/quizf-list.component.html
+++ b/src/app/demo/components/quizf/quizf-list/quizf-list.component.html
@@ -15,6 +15,13 @@
                     (click)="createNewQuiz()">
             </button>
             <button pButton 
+                    *ngIf="userIsOwner"
+                    label="Generate Quiz AI" 
+                    icon="pi pi-cog"
+                    class="p-button-secondary ml-2"
+                    (click)="openAiQuizDialog()">
+            </button>
+            <button pButton 
                     label="Back" 
                     icon="pi pi-arrow-left"
                     class="p-button-outlined"
@@ -119,3 +126,12 @@
 <p-toast></p-toast>
 
 <app-footer></app-footer>
+
+<!-- AI Quiz Dialog -->
+<div *ngIf="showAiQuizDialog" class="modal-overlay">
+    <app-ai-quiz-dialog
+        [workshopId]="workshopId"
+        (closeDialog)="onAiQuizDialogClose()"
+        (quizSaved)="loadQuizzes()">
+    </app-ai-quiz-dialog>
+</div>
